src/objects/Invoice_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Statements</relationshipLabel>
        <relationshipName>Invoice_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approx_Tax__c</fullName>
        <description>Based on a tax rate of 18%.</description>
        <formula>TotalCost__c * 0.18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approx. Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillTo__c</fullName>
        <label>Bill to</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Statements (Bill to)</relationshipLabel>
        <relationshipName>Invoice_Statements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoice Statements</relationshipLabel>
        <relationshipName>Invoice_Statements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InternalNotes__c</fullName>
        <label>Notes About Current Invoice</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Received_Date__c</fullName>
        <label>Payment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <defaultValue>40</defaultValue>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <formula>TotalHours__c *  Rate__c</formula>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalHours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>Line_Item__c.Hours__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice_Statement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice Statement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>TotalHours__c</columns>
        <columns>Status__c</columns>
        <columns>Payment_Received__c</columns>
        <columns>StartDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
            <value>Burlington Textiles Corp of America</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>INV</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>